# orx-v

./: Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: binary_search.rs  bubble_sort.rs  dijkstra.rs  dot_product.rs  floyd_warshall.rs  haversine.rs  two_opt.rs
src/: constant_vec.rs  empty_vec.rs  lib.rs  nvec.rs  nvec_aliases.rs  nvec_core.rs  nvec_core_sealed.rs  nvec_mut.rs
src/ARCHIVE/: failures.rs  nvec.rs  nvec_finite.rs  nvec_mut.rs  nvec_rec.rs  nvec_rec_mut.rs
src/ARCHIVE/fun/: builder.rs  fun_vec.rs  mod.rs
src/ARCHIVE/implementations/: mod.rs  scalar.rs
src/ARCHIVE/overloads/: kv_map.rs  mod.rs
src/ARCHIVE2/copied/: copied.rs  impl_nvec.rs  into_copied.rs  mod.rs
src/ARCHIVE2/dimensions/: dim.rs  into_index.rs  mod.rs
src/ARCHIVE2/flattened/: flattened.rs  impl_nvec.rs  into_flattened.rs  mod.rs
src/ARCHIVE2/fun/: builder.rs  funvec.rs  impl_nvec.rs  mod.rs
src/ARCHIVE2/maps/: mod.rs
src/ARCHIVE2/nvecs/: mod.rs  nvec.rs  nvec_val.rs
src/ARCHIVE2/vec/: impl_into_copied.rs  impl_nvec.rs  mod.rs
src/ARCHIVE3/funvec/: builder.rs  copied.rs  from_btree_map.rs  from_miscellaneous.rs  funvec.rs  mod.rs
src/ARCHIVE3/implementations/: mod.rs
src/ARCHIVE3/nvecs/: mod.rs  nvec.rs  nvec_ref.rs
src/ARCHIVE3/transformations/: copied.rs  copied_ref.rs  flattened.rs  mod.rs  transformed.rs  unwrapped.rs
src/ARCHIVE4/: failures.rs  lib.rs  nvec.rs  nvec_mut.rs
src/btree_map/: full_indexed.rs  mod.rs  recursive.rs
src/cached/: cache.rs  cached_vec.rs  impl_nvec.rs  impl_nvec_card.rs  into_cached.rs  mod.rs
src/cardinality/: card.rs  d1.rs  d2_rectangular.rs  d2_variable.rs  d3_rectangular.rs  d3_variable.rs  d4_rectangular.rs  d4_variable.rs  empty_card.rs  is_rectangular.rs  mod.rs  udd.rs
src/children/: child_d1.rs  child_d2.rs  child_d3.rs  mod.rs
src/common_trait_helpers/: debug.rs
src/dim/: d1.rs  d2.rs  d3.rs  d4.rs  dimension.rs  into_idx.rs  mod.rs  split.rs
src/dimensions/: mod.rs
src/flat_jagged/: impl_nvec.rs  impl_nvec_core.rs  impl_nvec_mut.rs  into_jagged.rs  jagged.rs  jagged_row.rs  mod.rs  uniform_end_indices.rs
src/fun/: funvec.rs  impl_into_cached.rs  impl_nvec.rs  impl_nvec_core.rs  into_bounded.rs  mod.rs
src/funvec/: as_nvec.rs  builder.rs  into_funvec.rs
src/impl_nvec/: array.rs  arrayvec.rs  impl_nvec_from_v1.rs  mod.rs  ndarray_multi_dim.rs  ndarray_recursive.rs  orx_fixed_vec.rs  orx_split_vec.rs  range.rs  slice.rs  smallvec.rs  tinyvec_arrayvec.rs  tinyvec_tinyvec.rs  vec.rs
src/impl_nvec_core/: array.rs  arrayvec.rs  impl_nvec_card_from_v1.rs  mod.rs  ndarray_multi_dim.rs  ndarray_recursive.rs  orx_fixed_vec.rs  orx_split_vec.rs  range.rs  slice.rs  smallvec.rs  tinyvec_arrayvec.rs  tinyvec_tinyvec.rs  vec.rs
src/impl_nvec_mut/: array.rs  arrayvec.rs  impl_mut_recursive_from_v1.rs  impl_nvec_mut_from_v1.rs  jagged.rs  mod.rs  ndarray_multi_dim.rs  ndarray_recursive.rs  orx_fixed_vec.rs  orx_split_vec.rs  slice.rs  smallvec.rs  tinyvec_arrayvec.rs  tinyvec_tinyvec.rs  vec.rs
src/impl_nvec_ref/: impl_nvec_ref_from_v1.rs  mod.rs  v_ref.rs
src/matrices/: matrix.rs  matrix_col_major.rs  matrix_mut.rs  matrix_row_major.rs  mod.rs
src/overloads/: copy_or_lazy.rs  copy_or_ref.rs  mod.rs  self_or_ref.rs
src/slice/: completed.rs  mod.rs  slice_1.rs  slice_2.rs  slice_n.rs
src/sparse/: into_bounded.rs  lookup.rs  mod.rs  sparse_vec.rs  sparse_vec_d1.rs  sparse_vec_d2.rs  sparse_vec_d3.rs  sparse_vec_d4.rs
src/transformations/: as_jagged.rs  as_matrix.rs  cached.rs  completed.rs  hooked.rs  mod.rs
src/v/: mod.rs  new_v1.rs  new_v2.rs  new_v3.rs  new_v4.rs
src/vec/: mod.rs  vec_1.rs  vec_2.rs  vec_n.rs
tests/: constant.rs  debug_nvec.rs  demo_two_opt.rs  dijkstras.rs  empty.rs  floyd_warshall.rs  fun.rs  jagged.rs  range.rs  sparse.rs  std_order_vec.rs  vertex_coloring.rs
(+155 files in other folders)
