[package]
name = "orx-v"
version = "1.0.2"
edition = "2021"
authors = ["orxfun <orx.ugur.arikan@gmail.com>"]
description = "Traits to unify all vectors!"
license = "MIT"
repository = "https://github.com/orxfun/orx-v/"
keywords = ["vec", "vector", "algorithm", "trait", "monomorphisation"]
categories = ["data-structures", "algorithms", "no-std"]

[dependencies]
arrayvec = { version = "0.7.6", default-features = false, optional = true }
ndarray = { version = "0.16.1", default-features = false, optional = true }
orx-fixed-vec = { version = "3.10.0", default-features = false, optional = true }
orx-split-vec = { version = "3.10.0", default-features = false, optional = true }
smallvec = { version = "1.13.2", default-features = false, optional = true }
tinyvec = { version = "1.8.0", default-features = false, optional = true, features = [
    "alloc",
] }

[dev-dependencies]
ndarray = "0.16"
num = "0.4"
orx-priority-queue = "1.4"
orx-split-vec = "3.10"
rand = "0.8"
rand_chacha = "0.3"

[features]
default = ["std"]
std = []
all = [
    "std",
    "arrayvec",
    "ndarray",
    "orx-fixed-vec",
    "orx-split-vec",
    "smallvec",
    "tinyvec",
]
